# ams

./: HC-SR04.py  README.md  adc_motor_test.py  animate_lidar.py  gain_test.py  gps_test3.py  lidar2D_test.py  lidar_test.py  pca9685_simpletest.py  py  record_lidar.py  servo_test.py  simpletest.py
ams_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ams_ws/log/: latest_build
ams_ws/src/ams_description/: CMakeLists.txt  ros2_control_ams.xml
ams_ws/src/ams_description/bringup/config/: ams_position_publisher.yaml
ams_ws/src/ams_description/bringup/launch/: ams_actuators.launch.py  ams_hardware.launch.py
ams_ws/src/ams_description/description/launch/: display.launch.py
ams_ws/src/ams_description/description/meshes/: lo_leg_plate_2.STL  lo_leg_plate_3.STL  lo_leg_plate_5.STL  up_leg_plate_2.STL  up_leg_plate_6.STL  up_ro_base_5.STL
ams_ws/src/ams_description/description/ros2_control/: ams_hardware.ros2_control.xacro
ams_ws/src/ams_description/hardware/: ams.cpp  ams_actuator.cpp
ams_ws/src/ams_description/hardware/include/ros2_control_ams/: ams.hpp
ams_ws/src/ams_hardware/: .ams_motor.cpp.swp  CMakeLists.txt  ams_hardware.xml  ams_motor.cpp
ams_ws/src/install/: local_setup.sh  setup.sh
ams_ws/src/log/: latest_build
developer/: SIM868_Starter.py  log_file.txt  login.sh  run_script.sh  status.txt
public/: control.html  index.html  input.html  status.html
publish/: publish_mqtt.cpp
ros2_ws/__MACOSX/AMS/: ._CMakeLists.txt  ._package.xml  ._~$ackage.xml
ros2_ws/__MACOSX/AMS/config/: ._joint_names_AMS.yaml
ros2_ws/__MACOSX/AMS/launch/: ._display.launch
ros2_ws/__MACOSX/AMS/meshes/: ._Center.STL  ._LegLO_5.STL
ros2_ws/__MACOSX/AMS/urdf/: ._AMS.csv  ._AMS.urdf
ros2_ws/install/: setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/AMS/: CMakeLists.txt  package.xml  ~$ackage.xml
ros2_ws/src/AMS/launch/: display.launch  (+1 more)
ros2_ws/src/ams/: CMakeLists.txt  package.xml
ros2_ws/src/install/: setup.sh
ros2_ws/src/log/: latest_build
(+240 files in other folders)
